change bg image, try to  correct font visibility issues

--- a/css.css
+++ b/css.css
@@ -1,12 +1,28 @@
 body {
-    background-image: url("images/city.jpeg");
+    background-image: url("images/city.jpg");
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-color: #ffffff;
-    color: Black;
+    color: rgb(255, 0, 0);
     font-family: 'Courier New', Courier, monospace, arial;
     text-align: center;
   }
   
+  a:link {
+    color: rgb(255, 0, 0);
+    font-weight: bold;
+  }
+  
+  a:visited {
+    color: rgb(255, 0, 0);
+  }
+  
+  a:hover {
+    color: rgb(255, 0, 0);
+  }
+  
+  a:active {
+    color: rgb(255, 0, 0);
+  }
